--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ html, body {
 .nav { 
 	text-align: center;
 	background-color: #000;
-	margin: 40px;
+	padding-top: 40px;
+	padding-bottom: 40px;
 }
 
 .button{
