--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
 
 .nav { 
 	text-align: center;
-	background-color: #000;
+	/*background-color: #000;*/
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
