--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
 
 .nav { 
 	text-align: center;
-	background-color: #fff;
+	background-color: lightblue;
 	padding-top: 5px;
 	padding-bottom: 5px;
 }
