--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 	text-align: center;
 }
 
-.nav { 
+nav { 
 	text-align: center;
 	background-color: lightblue;
 	padding-top: 5px;
@@ -18,4 +18,8 @@ html, body {
 	background-color: #000;
 	padding: 10px 10px;
 	text-decoration: none;
+}
+
+footer {
+	text-align: center;
 }
